# GenAI

Agents/: main.py  pyproject.toml
RAG/: pyproject.toml
RAG/rag/: chat.py  indexing.py
embeddings/: main.py  pyproject.toml
tokenization/: main.py  pyproject.toml
