[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.4.2",
]
